# C-Lab-Course

./: README.md
maman11/q1/: makefile  q1  q1.c
maman11/q2/: makefile  q2  q2.c
maman14/: CMakeLists.txt  assembler  beautifyLines.c  beautifyLines.h  commands.c  commands.h  directives.c  directives.h  fileFunctions.c  fileFunctions.h  firstPass.c  firstPass.h  global.h  lineToSentence.c  lineToSentence.h  main.c  preAssemblerRun.c  preAssemblerRun.h  secondPass.c  secondPass.h  utils.c  utils.h
maman14/A/: A1.am  A1.as
maman14/B/: B1.am  B1.as  B2.am  B2.as  B3.am  B3.as  B4.am  B4.as
maman14/C/: C1.am  C1.ent  C1.ob
maman14/openMe/: makefile  readMe
maman22/: complex  complex.c  complex.h  findErrorsPreReading.c  makefile  mycomp.c  readNewLineHelper.c  runCommandAndFindErrors.c  test1  test2  test3
maman23/: makefile  question1.txt  seek  seek.c
